# static/swagger.json
@@ -3,182 +3,132 @@
   "info": {
     "description": "",
     "version": "1.0.0",
-    "title": "Flask Restful OpenAPI",
+    "title": "Restful OpenAPI",
     "license": {
       "name": "MIT",
       "url": "https://opensource.org/licenses/MIT"
     }
   },
-  "servers": [
-    {
-      "url": "/"
-    }
-  ],
   "tags": [
     {
-      "name": "Flask Restful OpenAPI",
-      "description": "Example Restful OpenAPI"
+      "name": "Example of restful open api",
+      "description": ""
     }
   ],
   "paths": {
-    "/request": {
-      "get": {
-        "tags": [
-          "Book Request"
-        ],
-        "summary": "Returns bookRequests",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/components/schemas/bookRequests"
-            }
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "Book Request"
-        ],
-        "summary": "Create a new book request system",
-        "requestBody": {
-          "description": "Book Request Post Object",
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/bookRequestPostBody"
-              }
-            }
-          }
-        },
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "201": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/components/schemas/id"
-            }
-          },
-          "400": {
-            "description": "Failed. Bad post data."
-          }
-        }
-      }
-    },
-    "/request/{id}": {
+    "/data": {
       "parameters": [
         {
-          "name": "id",
-          "in": "path",
-          "required": true,
-          "description": "ID of the cat that we want to match",
+          "name": "title",
+          "in": "query",
+          "required": false,
+          "description": "Enter Name",
+          "type": "string"
+        },
+        {
+          "name": "bedroom",
+          "in": "query",
+          "required": false,
+          "description": "Enter bedroom",
+          "type": "string"
+        },
+        {
+          "name": "sleeps",
+          "in": "query",
+          "required": false,
+          "description": "Enter sleeps",
+          "type": "string"
+        },
+        {
+          "name": "bathroom",
+          "in": "query",
+          "required": false,
+          "description": "Enter bathroom",
+          "type": "string"
+        },
+        {
+          "name": "price",
+          "in": "query",
+          "required": false,
+          "description": "Enter price",
+          "type": "string"
+        },
+        {
+          "name": "location",
+          "in": "query",
+          "required": false,
+          "description": "Enter location",
           "type": "string"
         }
       ],
       "get": {
-        "tags": [
-          "Book Request"
-        ],
-        "summary": "Get book request with given ID",
+        "tags": ["House request"],
+        "summary": "Enter Name",
         "parameters": [
           {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "description": "Book Request id",
+            "name": "title",
+            "in": "query",
+            "required": false,
+            "description": "Enter Name",
             "schema": {
-              "$ref": "#/components/schemas/id"
+              "$ref": "#/components/schemas/title"
+            }
+          },
+          {
+            "name": "bedroom",
+            "in": "query",
+            "required": false,
+            "description": "Enter bedroom",
+            "schema": {
+              "$ref": "#/components/schemas/bedroom"
+            }
+          },
+          {
+            "name": "sleeps",
+            "in": "query",
+            "required": false,
+            "description": "Enter sleeps",
+            "schema": {
+              "$ref": "#/components/schemas/sleeps"
+            }
+          },
+          {
+            "name": "bathroom",
+            "in": "query",
+            "required": false,
+            "description": "Enter bathroom",
+            "schema": {
+              "$ref": "#/components/schemas/bathroom"
+            }
+          },
+          {
+            "name": "price",
+            "in": "query",
+            "required": false,
+            "description": "Enter price",
+            "schema": {
+              "$ref": "#/components/schemas/price"
+            }
+          },
+          {
+            "name": "location",
+            "in": "query",
+            "required": false,
+            "description": "Enter location",
+            "schema": {
+              "$ref": "#/components/schemas/location"
             }
           }
         ],
         "responses": {
           "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/components/schemas/bookRequest"
-            }
+            "description": "OK"
           },
           "400": {
-            "description": "Failed. Misunderstood Request."
+            "description": "Failed! Invalid Request."
           },
           "404": {
-            "description": "Failed. Book request not found."
-          }
-        }
-      },
-      "put": {
-        "summary": "edit a book request by ID",
-        "tags": [
-          "Book Request"
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "description": "Book Request id",
-            "schema": {
-              "$ref": "#/components/schemas/id"
-            }
-          }
-        ],
-        "requestBody": {
-          "description": "Book Request Object",
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/bookRequest"
-              }
-            }
-          }
-        },
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/components/schemas/bookRequest"
-            }
-          },
-          "400": {
-            "description": "Failed. Bad post data."
-          }
-        }
-      },
-      "delete": {
-        "summary": "Delete Book Request by ID",
-        "tags": [
-          "Book Request"
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "description": "Book Request Id",
-            "schema": {
-              "$ref": "#/components/schemas/id"
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/components/schemas/id"
-            }
-          },
-          "400": {
-            "description": "Failed. Misunderstood Request."
-          },
-          "404": {
-            "description": "Failed. Book Request not found."
+            "description": "Failed! request not found."
           }
         }
       }
@@ -186,51 +136,45 @@
   },
   "components": {
     "schemas": {
-      "id": {
+      "title": {
         "properties": {
-          "uuid": {
+          "title": {
             "type": "string"
           }
         }
       },
-      "bookRequestPostBody": {
-        "type": "object",
+      "bedroom": {
         "properties": {
-          "title": {
-            "type": "string",
-            "format": "string"
-          },
-          "email": {
-            "type": "string",
-            "format": "email"
+          "bed": {
+            "type": "string"
           }
         }
       },
-      "bookRequest": {
-        "type": "object",
+      "sleeps": {
         "properties": {
-          "title": {
-            "type": "string",
-            "format": "string"
-          },
-          "email": {
-            "type": "string",
-            "format": "email"
-          },
-          "timestamp": {
-            "type": "string",
-            "format": "number"
+          "sleep": {
+            "type": "string"
           }
         }
       },
-      "bookRequests": {
-        "type": "object",
+      "bathroom": {
         "properties": {
-          "bookRequest": {
-            "type": "object",
-            "additionalProperties": {
-              "$ref": "#/components/schemas/bookRequest"
-            }
+          "bath": {
+            "type": "string"
+          }
+        }
+      },
+      "price": {
+        "properties": {
+          "money": {
+            "type": "string"
+          }
+        }
+      },
+      "location": {
+        "properties": {
+          "loc": {
+            "type": "string"
           }
         }
       }
